--- a/src/components/citas/citas.css
+++ b/src/components/citas/citas.css
@@ -1,24 +1,24 @@
-.container{
-    display: flex;
-    flex-direction: column;
-    min-height: 100px !important;
-    
-}
 .ctnFlex{
     display: flex;
+    height:80vh;
     justify-content: space-between;
     text-align: center;
 }
-
+h3{
+    font-size:2.5rem;
+    
+}
 .leftPosition{
     width:43%;
-    margin:2%;
- 
+    margin-left: 10%;
+    margin-top: 5%;
 }
 .rightPosition{
-    width:43%;
-    margin:2%;
+    width:50%;
     float:right;
-    padding: 2%;
-  
+    margin-left: 5%;
+    margin-top: 8%;
+}
+.danger{
+    background-color: red !important;
 }
